# Lean-Graph-Analysis

./: .gitignore  BUG_REPORT.md  BUG_REPORT_DETAILED.md  BUG_SUMMARY.md  COMPATIBILITY_ISSUE.md  DEBUG_GUIDE.md  FINAL_ANALYSIS.md  LEAN_DOJO_V2_BUG_REPORT.md  README.md  pyproject.toml  requirements.txt
experiments/: README.md  pyproject.toml
experiments/MyNNG/: test_build_graph.py
experiments/MyNNG/LambdaNat/: LambdaNat.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
experiments/MyNNG/LambdaNat/LambdaNat/: Arithmetics.lean  LambdaCalculus.lean  NaturalNumber.lean
experiments/MyNNG/MyNNG/: MyNNG.lean  lake-manifest.json  lakefile.toml
experiments/MyNNG/MyNNG/MyNNG/: Addition.lean  AdvAddition.lean  Algorithm.lean  Header.lean  Implication.lean  LessOrEqual.lean
experiments/MyNNG/MyNat/: Main.lean  MyNat.lean  README.md  lake-manifest.json  lakefile.toml
experiments/MyNNG/MyNat/MyNat/: Addition.lean  AdvAddition.lean  AdvMultiplication.lean  Algorithm.lean  Basic.lean  Header.lean  Implication.lean  LessOrEqual.lean  Multiplication.lean  Power.lean
experiments/MyNNG/NN/: NN.lean  README.md  lake-manifest.json  lakefile.toml
experiments/MyNNG/graphs/: MyNat_dependency_graph.graphml
lean_graph_analyser/: README.md  pyproject.toml
lean_graph_analyser/lean_graph_analyser/: __init__.py  graph_generator.py
lean_graph_analyser/lean_graph_analyser/metric_analysis/: __init__.py  seperation_analysis.py
lean_graph_analyser/lean_graph_analyser/metrics/: __init__.py
lean_graph_analyser/lean_graph_analyser/utils/: __init__.py  notifier.py  plot_graph.py
