[project]
name = "lean-graph-analyser"
version = "0.1.0"
description = "Python package for analyzing dependency graphs in Lean theorem proving projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Lixing Li", email = "ll963@cornell.edu" }
]
license = { text = "MIT" }
dependencies = [
    "igraph",
    "lean-dojo-v2",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lean_graph_analyser"]
